name:     merge-heightmaps
version:  0.1.0
category: Utils
synopsis: Merge and quantise TES3MP LiveMap heightmaps

maintainer:   Michael Fitzmayer <mail@michael-fitzmayer.de>
author:       Ertugrul Söylemez <esz@posteo.de>
copyright:    Copyright 2017 Ertugrul Söylemez
license:      BSD3
license-file: LICENSE

build-type:    Simple
cabal-version: >= 1.10


executable merge-heightmaps
    build-depends:
        aeson,
        base >= 4.8 && < 4.11,
        bytestring,
        text,
        unordered-containers
    default-language: Haskell2010
    ghc-options: -W -threaded
    main-is: merge-heightmaps.hs
